--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 <style>
     body{
         height: 500px;
-        background-image: linear-gradient(red, green)
+        /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#a90329+0,6d0019+100 */
+background: #a90329; /* Old browsers */
+background: -moz-linear-gradient(top,  #a90329 0%, #6d0019 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #a90329 0%,#6d0019 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #a90329 0%,#6d0019 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a90329', endColorstr='#6d0019',GradientType=0 ); /* IE6-9 */
     }
 </style>
 <body>
