--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,7 @@
 font-size: 40px;
 width: 100%;
 display: grid;
+grid-template-columns: 200px 200px 200px;
     }
     .d1{
         background-color: red;
