--- a/index1.html
+++ b/index1.html
@@ -11,6 +11,7 @@ font-size: 40px;
 width: 100%;
 display: grid;
 grid-template-columns: 200px auto 200px;
+grid-gap: 20px 10px;
     }
     .d1{
         background-color: red;
@@ -26,6 +27,7 @@ grid-template-columns: 200px auto 200px;
 }
     .d5{
         background-color:pink;
+        grid-column: 2/4;
     }
 
     </style>
