--- a/index1.html
+++ b/index1.html
@@ -24,10 +24,12 @@ grid-gap: 20px 10px;
 }
     .d4{        
         background-color: violet;
+        justify-self: center;
 }
     .d5{
         background-color:pink;
         grid-column: 2/4;
+        grid-row: 1/3; 
     }
 
     </style>
