--- a/index1.html
+++ b/index1.html
@@ -18,13 +18,14 @@ grid-gap: 20px 10px;
     }
     .d2{
         background-color: green;
+        justify-self: stretch;
+        align-self: end;
     }
     .d3{        
         background-color: yellowgreen;
 }
     .d4{        
         background-color: violet;
-        justify-self: center;
 }
     .d5{
         background-color:pink;
