--- a/index1.html
+++ b/index1.html
@@ -12,6 +12,7 @@ width: 100%;
 display: grid;
 grid-template-columns: 200px auto 200px;
 grid-gap: 20px 10px;
+justify-items: center;
     }
     .d1{
         background-color: red;
