--- a/index1.html
+++ b/index1.html
@@ -10,17 +10,21 @@
 font-size: 40px;
 width: 100%;
 display: grid;
-grid-template-columns: 200px auto 200px;
+grid-template-columns: 200px 200px 200px;
 grid-gap: 20px 10px;
-justify-items: center;
+/* justify-items: center;
+align-items: end; */
+grid-template-areas: 
+        "header . menu"; 
     }
     .d1{
         background-color: red;
+        grid-area: menu;
     }
     .d2{
         background-color: green;
-        justify-self: stretch;
-        align-self: end;
+        /* justify-self: stretch;
+        align-self: end; */
     }
     .d3{        
         background-color: yellowgreen;
@@ -30,8 +34,9 @@ justify-items: center;
 }
     .d5{
         background-color:pink;
-        grid-column: 2/4;
-        grid-row: 1/3; 
+        /* grid-column: 2/4;
+        grid-row: 1/3;  */
+        /* align-self: center; */
     }
 
     </style>
