--- a/index1.html
+++ b/index1.html
@@ -15,13 +15,16 @@ grid-gap: 20px 10px;
 /* justify-items: center;
 align-items: end; */
 grid-template-areas: 
-        "header . menu"; 
+        "header header header"
+        "sidebar content menu"
+        "sidebar . menu";
     }
     .d1{
         background-color: red;
         grid-area: menu;
     }
     .d2{
+        grid-area: header;
         background-color: green;
         /* justify-self: stretch;
         align-self: end; */
@@ -31,6 +34,7 @@ grid-template-areas:
 }
     .d4{        
         background-color: violet;
+        grid-area: 1/1/3/3;
 }
     .d5{
         background-color:pink;
