--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 font-size: 40px;
 width: 100%;
 display: grid;
-grid-template-columns: 200px 200px 200px;
+grid-template-columns: 200px 2fr 1fr;
 grid-gap: 20px 10px;
 /* justify-items: center;
 align-items: end; */
