--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 font-size: 40px;
 width: 100%;
 display: grid;
-grid-template-columns: 200px 2fr 1fr;
+grid-template-columns: repeat (3, 1fr) 200px;
 grid-gap: 20px 10px;
 /* justify-items: center;
 align-items: end; */
@@ -34,7 +34,6 @@ grid-template-areas:
 }
     .d4{        
         background-color: violet;
-        grid-area: 1/1/3/3;
 }
     .d5{
         background-color:pink;
