--- a/index1.html
+++ b/index1.html
@@ -10,7 +10,7 @@
 font-size: 40px;
 width: 100%;
 display: grid;
-grid-template-columns: repeat(auto-fill, 3, 1fr);
+grid-template-columns: repeat(auto-fill, minmax(3, 1fr));
 grid-gap: 20px 10px;
 /* justify-items: center;
 align-items: end; */
@@ -21,10 +21,10 @@ grid-template-areas:
     }
     .d1{
         background-color: red;
-        grid-area: menu;
+        /* grid-area: menu; */
     }
     .d2{
-        grid-area: header;
+        /* grid-area: header; */
         background-color: green;
         /* justify-self: stretch;
         align-self: end; */
