--- a/index1.html
+++ b/index1.html
@@ -14,10 +14,10 @@ grid-template-columns: repeat(auto-fit, minmax(3, 1fr));
 grid-gap: 20px 10px;
 /* justify-items: center;
 align-items: end; */
-grid-template-areas: 
+/* grid-template-areas: 
         "header header header"
         "sidebar content menu"
-        "sidebar . menu";
+        "sidebar . menu"; */
     }
     .d1{
         background-color: red;
